Bug fix on mobile version title

--- a/public/css/MobileApp.css
+++ b/public/css/MobileApp.css
@@ -24,7 +24,7 @@ body {
   text-align: center;
 }
 
-.navbar-option-mobile {
+.navbar-option {
   display: inline-block;
   height: auto;
   margin: auto;
